--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
 .snowpack
 build
 node_modules
+
+# dotenv environment variables file
+.env
+.env.build
+
+# Serverless directories
+.serverless
+
+# IDE / Editor
+.idea
+
+# Service worker
+sw.*
+
+# macOS
+.DS_Store
+
+# Vim swap files
+*.swp
+
+# Vercel
+.vercel
