--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "scripts": {
-    "start": "sirv public --no-clear --brotli --http2",
+    "start": "sirv build --no-clear --brotli",
     "dev": "snowpack dev",
     "build": "snowpack build",
     "test": "echo \"This template does not include a test runner by default.\" && exit 1",
-    "deploy": "gh-pages --dist 'build' --branch 'gh-pages'"
+    "deploy": "yarn build && gh-pages --dist 'build' --branch 'gh-pages'"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.0.3",
@@ -13,14 +13,19 @@
     "@snowpack/plugin-svelte": "^3.7.0",
     "@snowpack/plugin-webpack": "^3.0.0",
     "autoprefixer": "^10.3.7",
-    "postcss": "^8.3.9",
-    "snowpack": "^3.3.7"
+    "cssnano": "^5.0.10",
+    "gh-pages": "^3.2.3",
+    "postcss": "^8.3.11",
+    "sirv-cli": "^1.0.14",
+    "snowpack": "^3.3.7",
+    "webpack": "^5.59.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "sirv-cli": "^1.0.14",
+    "daisyui": "^1.14.2",
+    "fingerprintjs": "^0.5.3",
     "svelte": "^3.43.1",
     "svelte-awesome": "^2.4.2",
     "tailwindcss": "^2.2.16"
