--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@snowpack/plugin-optimize": "^0.2.13",
     "daisyui": "^1.14.2",
     "fingerprintjs": "^0.5.3",
     "svelte": "^3.43.1",
